# rustlens

./: Cargo.toml  LICENSE  README.md  config-dev.toml
apps/rustlens/: Cargo.toml
apps/rustlens/src/: main.rs
apps/rustlensmanager/: Cargo.toml
apps/rustlensmanager/src/: main.rs
crates/rustlens-core/: Cargo.toml
crates/rustlens-core/src/: lib.rs
crates/rustlens-core/src/db/: connect.rs  mod.rs  postgres.rs  protocol.rs  worker.rs
crates/rustlens-core/src/model/: connection.rs
crates/rustlens-core/src/util/: mod.rs  value_fmt.rs
crates/rustlens-tui/: Cargo.toml
crates/rustlens-tui/src/: config.rs  lib.rs
crates/rustlens-tui/src/app/: actions.rs  event.rs  mod.rs  reducer.rs  run.rs  state.rs
crates/rustlens-tui/src/app/sql/: complete.rs  cursor.rs  mod.rs
crates/rustlens-tui/src/term/: input.rs  terminal.rs
crates/rustlens-tui/src/ui/: draw.rs  layout.rs  mod.rs  syntax.rs  theme.rs  widgets.rs
crates/rustlens-tui/src/ui/screens/: manager.rs  mod.rs  viewer.rs
