[package]
name = "rustlens"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }

rustlens-tui = { path = "../../crates/rustlens-tui" }
rustlens-core = { path = "../../crates/rustlens-core" }
